Setting orientation of layout and header

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -1,8 +1,11 @@
-include header
+include layout
 
 #landing
-  #header-bar
   #welcome-splash
     h1 Welcome to PuzzleClub
-  #who-we-are-splash  
+
+  #who-we-are-splash
+    h1 Hello user
+  #how-to-join
+
 
