Setting up a header and gathering layout format

--- a/views/header.pug
+++ b/views/header.pug
@@ -1,5 +1,15 @@
-header
-  .name
+nav
+  .logo
     h3 Puzzle Club
-  a(href='#')
-    i.fa.fa-address-book
+  .nav-area
+    .wideDiv
+      a(href = "#") Link 1
+      a(href = "#") Link 2
+      a(href = "#") Link 3
+  .navNarrow
+    i.fa.fa-bars.fa-2x
+  //- .name
+  //-   h3 Puzzle Club
+  //- a(href='#')
+  //-   i.fa.fa-address-book
+  script.
